<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/top"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/home_drawer"
            android:title="@string/DashBoard" />
        <item android:id="@+id/nav_myclass"
            android:icon="@drawable/myclass_drawer"
            android:title="@string/MyClass" />
        <item android:id="@+id/nav_homework"
            android:icon="@drawable/homework_drawer"
            android:title="@string/Homework" />
        <item android:id="@+id/nav_timetable"
            android:icon="@drawable/timetable_drawer"
            android:title="@string/TimeTable" />
        <item android:id="@+id/nav_classwork"
            android:icon="@drawable/homework_drawer"
            android:title="@string/Classwork" />
        <item android:id="@+id/nav_star"
            android:icon="@drawable/rewardstar_drawer"
            android:title="@string/RewardStar" />

    </group>

    <group
        android:id="@+id/bottom"
        android:checkableBehavior="single">
            <item android:id="@+id/nav_chat"
                android:icon="@drawable/chat_drawer"
                android:title="@string/Chat" />
            <item android:id="@+id/nav_alert"
                android:icon="@drawable/announcement_drawer"
                android:title="@string/Alerts" />
            <item android:id="@+id/nav_funcenter"
                android:icon="@drawable/funcenter_drawer"
                android:title="@string/FunCenter" />
            <item android:id="@+id/nav_holiday"
                android:icon="@drawable/holiday_drawer"
                android:title="@string/Holiday" />
    </group>

    <item android:id="@+id/nav_sync"
        android:icon="@drawable/sync_drawer"
        android:title="@string/Sync" />

    <item android:id="@+id/nav_logout"
        android:icon="@drawable/logout_drawer"
        android:title="@string/Logout" />
</menu>